--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -2,7 +2,9 @@ name: Build Image
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
+  pull_request:
+    types: [ open, reopened, synchronize ]
   release:
     types: [ published  ]
 
