--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    types: [ open, reopened, synchronize ]
+    types: [ opened, reopened, synchronize ]
   release:
     types: [ published  ]
 
