--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -37,6 +37,7 @@ jobs:
         tags: |
           type=ref,event=tag
           type=ref,event=branch
+          type=ref,event=pr
           type=sha
           type=raw,value=latest,enable={{is_default_branch}}
 
